--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -133,9 +133,11 @@
             <%= image_tag item.image, class: "item-img" %>
 
             <%# 商品が売れていればsold outを表示しましょう %>
-            <div class='sold-out'>
-              <span>Sold Out!!</span>
-            </div>
+            <% if Order.exists?(item_id: item.id) %>
+              <div class='sold-out'>
+                <span>Sold Out!!</span>
+              </div>
+            <% end %>
             <%# //商品が売れていればsold outを表示しましょう %>
 
           </div>
