--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -9,9 +9,11 @@
         <div class="item-img-content">
           <%= image_tag @item.image ,class:"item-box-img" %>
           <%# 商品が売れている場合は、sold outを表示しましょう %>
-          <div class="sold-out">
-            <span>Sold Out!!</span>
-          </div>
+          <% if Order.exists?(item_id: @item.id)%>
+            <div class="sold-out">
+              <span>Sold Out!!</span>
+            </div>
+          <% end %>
           <%# //商品が売れている場合は、sold outを表示しましょう %>
         </div>
         <div class="item-price-box">
@@ -25,13 +27,16 @@
 
 
       <% if user_signed_in? %>  
-        <% if  current_user.id == @item.user_id %>
-          <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
-          <p class="or-text">or</p>
-          <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
-        <% else %>
+        <% unless Order.exists?(item_id: @item.id)%>
+          <% if  current_user.id == @item.user_id %>
+            <%= link_to "商品の編集", edit_item_path(@item.id), method: :get, class: "item-red-btn" %>
+            <p class="or-text">or</p>
+            <%= link_to "削除", item_path(@item.id), method: :delete, class:"item-destroy" %>
+          <% else %>
           <%# 商品が売れていない場合はこちらを表示しましょう %>
-          <%= link_to "購入画面に進む", item_orders_path(@item.id), method: :get, class:"item-red-btn"%>
+          
+            <%= link_to "購入画面に進む", item_orders_path(@item.id), method: :get, class:"item-red-btn"%>
+          <% end %>
           <%# //商品が売れていない場合はこちらを表示しましょう %>
         <% end %>
       <% end %>
